--- a/styles/base.css
+++ b/styles/base.css
@@ -3,12 +3,10 @@
   --color-white: #F0F1F5;
 }
 body {
-  max-width:1120px;
-  max-height:auto;
+  max-width: 1120px;
   margin-left: auto;
   margin-right:auto;
-  display:flex;
-  flex-direction: column;
+  align-items:  center;
   font-family: 'Inter', sans-serif;
   background-color: var(--color-grey);
   color: var(--color-white);
