--- a/styles/title.css
+++ b/styles/title.css
@@ -1,7 +1,7 @@
 .title {
-  display:flex;
-  flex-direction: row;
   font-size: 42px;
   font-weight:700;
   color: var(--color-white);
+
+  margin-top: 30px;
 }
