--- a/styles/root.css
+++ b/styles/root.css
@@ -5,7 +5,11 @@
   --color-fourth: #171717;
   --color-fifth: #828282;
   --color-sixth: #F9F9F9;
-  
+
+  width: 100vw;
+  height: auto;
+  /* display: flex; */
   font-size:62.5%;
   font-family: 'DM Sans', sans-serif;
+  color: var(--color-sixth) ;
 }
