--- a/styles/header.css
+++ b/styles/header.css
@@ -1,19 +1,44 @@
 @import url('./root.css');
 
-.header .first-header {
+.navbar {
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  margin-top: 35px;
+  align-items: center;
+  padding: 1rem 1.5rem;
 }
 
-.header .first-header .menu .link {
-  margin-right: 45px;
-  text-decoration: none;
-  color: inherit;
+.hamburger {
+  display: none;
 }
-.header .first-header .menu .link:last-child{
-  margin-right: 0;
+
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: var(--color-second);
+}
+
+.nav-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-item {
+  margin-left: 5rem;
+}
+
+.nav-link{
+  font-size: 1.6rem;
+  font-weight: 400;
+  color: var(--color-sixth);
+}
+
+.nav-link:hover{
+  color: var(--color-primary);
 }
 
 .header .media-header {
@@ -44,5 +69,71 @@
 .header .media-header img {
   width: 300px;
   height: 255px;
-  
+}
+
+@media(max-width: 900px) {
+  .nav-menu {
+    position: fixed;
+    left: -100%;
+    top: 5rem;
+    flex-direction: column;
+    background-color: var(--color-second);
+    width: 100%;
+    border-radius: 10px;
+    text-align: center;
+    transition: 0.3s;
+    box-shadow:
+        0 10px 27px rgba(0, 0, 0, 0.05);
+}
+
+.nav-menu.active {
+    left: 0;
+}
+
+.nav-item {
+    margin: 2.5rem 0;
+}
+
+.hamburger {
+    display: block;
+    cursor: pointer;
+}
+
+.hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+}
+
+.hamburger.active .bar:nth-child(1) {
+    -webkit-transform: translateY(8px) rotate(45deg);
+    transform: translateY(8px) rotate(45deg);
+}
+
+.hamburger.active .bar:nth-child(3) {
+    -webkit-transform: translateY(-8px) rotate(-45deg);
+    transform: translateY(-8px) rotate(-45deg);
+}
+/* Minhas alterações */
+  .header .media-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 35px;
+  }
+  .header .media-header img {
+    margin-top: 60px;
+  }
+
+}
+
+@media(max-width: 425px) {
+  .header .media-header .apresentation .sub-menu{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: space-between;
+    margin-top: 35px;
+  }
+  .header .media-header > img {
+    display: none;
+  }
 }
