--- a/jean.io/src/components/Header/header.scss
+++ b/jean.io/src/components/Header/header.scss
@@ -1,73 +1,39 @@
 @import '../../assets/scss/reset.scss';
 
+@import'../../assets/scss/global.scss';
 
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem 1.5rem;
-}
-
-.hamburger {
-  display: none;
-}
-
-.bar {
-  display: block;
-  width: 25px;
-  height: 3px;
-  margin: 5px auto;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  background-color: var(--color-second);
-}
-
-.nav-menu {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.nav-item {
-  margin-left: 5rem;
-}
-
-.nav-link{
-  font-size: 1.6rem;
-  font-weight: 400;
-  color: var(--color-sixth);
-}
-
-.nav-link:hover{
-  color: var(--color-primary);
-}
-
-.header .media-header {
+.media-header {
   max-width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: end;
-}
-.header .media-header .apresentation {
-  margin-top: 143px;
-}
-.header .media-header .apresentation .sub-menu{
-  max-width: 100%;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 35px;
+  .apresentation {
+    margin-top: 143px;
+    
+    .title-2{
+      max-width: 220px;
+    }
+
+    .sub-menu{
+      max-width: 100%;
+      display: flex;
+      justify-content: space-between;
+      margin-top: 35px;
+      
+      .button{
+        margin-right: 15px;
+      }
+
+    }
+
+  }
+
 }
 
-.header .media-header .apresentation .sub-menu .button{
-  margin-right: 15px;
-}
 
-.header .media-header .apresentation .title-2{
-  max-width: 220px;
-  
-}
+ .media-header .apresentation 
 
-.header .media-header img {
+ .media-header img {
   width: 300px;
   height: 255px;
 }
@@ -114,27 +80,94 @@
     transform: translateY(-8px) rotate(-45deg);
 }
 /* Minhas alterações */
-  .header .media-header {
+  .media-header {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 35px;
   }
-  .header .media-header img {
+  .media-header img {
     margin-top: 60px;
   }
 
 }
 
 @media(max-width: 425px) {
-  .header .media-header .apresentation .sub-menu{
+  .media-header .apresentation .sub-menu{
     display: flex;
     flex-direction: column;
     gap: 20px;
     justify-content: space-between;
     margin-top: 35px;
   }
-  .header .media-header > img {
+  .media-header > img {
+    display: none;
+  }
+}
+
+@media(max-width: 900px) {
+  .nav-menu {
+    position: fixed;
+    left: -100%;
+    top: 5rem;
+    flex-direction: column;
+    background-color: var(--color-second);
+    width: 100%;
+    border-radius: 10px;
+    text-align: center;
+    transition: 0.3s;
+    box-shadow:
+        0 10px 27px rgba(0, 0, 0, 0.05);
+}
+
+.nav-menu.active {
+    left: 0;
+}
+
+.nav-item {
+    margin: 2.5rem 0;
+}
+
+.hamburger {
+    display: block;
+    cursor: pointer;
+}
+
+.hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+}
+
+.hamburger.active .bar:nth-child(1) {
+    -webkit-transform: translateY(8px) rotate(45deg);
+    transform: translateY(8px) rotate(45deg);
+}
+
+.hamburger.active .bar:nth-child(3) {
+    -webkit-transform: translateY(-8px) rotate(-45deg);
+    transform: translateY(-8px) rotate(-45deg);
+}
+/* Minhas alterações */
+   .media-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 35px;
+  }
+   .media-header img {
+    margin-top: 60px;
+  }
+
+}
+
+@media(max-width: 425px) {
+   .media-header .apresentation .sub-menu{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: space-between;
+    margin-top: 35px;
+  }
+   .media-header > img {
     display: none;
   }
 }
