--- a/jean.io/src/components/Navbar/navbar.scss
+++ b/jean.io/src/components/Navbar/navbar.scss
@@ -2,6 +2,7 @@
 
 @import'../../assets/scss/global.scss';
 
+@import '../../assets/scss/colors.scss';
 
 
 .navbar {
@@ -40,7 +41,48 @@
   font-weight: 400;
   color: $color-sixth;
 
-  :hover{
+  &:hover{
     color: $color-primary;
   }
+}
+
+@media(max-width: 900px) {
+  .nav-menu {
+    position: fixed;
+    left: -100%;
+    top: 5rem;
+    flex-direction: column;
+    background-color: var(--color-second);
+    width: 100%;
+    border-radius: 10px;
+    text-align: center;
+    transition: 0.3s;
+    box-shadow:
+        0 10px 27px rgba(0, 0, 0, 0.05);
+}
+
+.nav-menu.active {
+    left: 0;
+}
+
+.nav-item {
+    margin: 2.5rem 0;
+}
+
+.hamburger {
+  display: block;
+  cursor: pointer;
+  &.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+  &.active .bar:nth-child(1) {
+    -webkit-transform: translateY(8px) rotate(45deg);
+    transform: translateY(8px) rotate(45deg);
+  }
+  &.active .bar:nth-child(3) {
+    -webkit-transform: translateY(-8px) rotate(-45deg);
+    transform: translateY(-8px) rotate(-45deg);
+  }
+}
+
 }
