Adicionando as image e ima da header.

--- a/jean.io/src/components/Header/header.scss
+++ b/jean.io/src/components/Header/header.scss
@@ -3,12 +3,11 @@
 @import'../../assets/scss/global.scss';
 
 .media-header {
-  max-width: 100%;
+  max-width: 90%;
   display: flex;
   justify-content: space-between;
   align-items: end;
   .apresentation {
-    margin-top: 143px;
     
     .title-2{
       max-width: 220px;
@@ -28,14 +27,12 @@
 
   }
 
-}
+  img {
+    width: 300px;
+    height: 255px;
+    margin-top: 143px;
+  }
 
-
- .media-header .apresentation 
-
- .media-header img {
-  width: 300px;
-  height: 255px;
 }
 
 @media(max-width: 900px) {
