--- a/jean.io/src/components/Header/header.scss
+++ b/jean.io/src/components/Header/header.scss
@@ -15,15 +15,15 @@
     img {
     width: 300px;
     height: 255px;
-}
+    }
   }
-    .sub-menu{
-      max-width: 100%;
-      display: flex;
-      justify-content: space-between;
-      margin-top: 35px;
+  .sub-menu{
+    max-width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 35px;
       
-      .button{
+    .button{
         margin-right: 15px;
       }
   }
@@ -33,8 +33,7 @@
     height: 255px;
     margin-top: 143px;
   }
-
- .media-header 
+}
 @media(max-width: 900px) {
   .nav-menu {
     position: fixed;
@@ -130,41 +129,48 @@
     cursor: pointer;
 }
 
-.hamburger.active .bar:nth-child(2) {
-    opacity: 0;
-}
-
-.hamburger.active .bar:nth-child(1) {
-    -webkit-transform: translateY(8px) rotate(45deg);
-    transform: translateY(8px) rotate(45deg);
-}
-
-.hamburger.active .bar:nth-child(3) {
-    -webkit-transform: translateY(-8px) rotate(-45deg);
-    transform: translateY(-8px) rotate(-45deg);
-}
-/* Minhas alterações */
-   .media-header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 35px;
+.hamburger.active{
+  .bar{
+    :nth-child(2) {
+      opacity: 0;
+    }
+    :nth-child(1) {
+      -webkit-transform: translateY(8px) rotate(45deg);
+      transform: translateY(8px) rotate(45deg);
+    }
+    :nth-child(1) {
+      -webkit-transform: translateY(8px) rotate(45deg);
+      transform: translateY(8px) rotate(45deg);
+    }
+    :nth-child(3) {
+      -webkit-transform: translateY(-8px) rotate(-45deg);
+      transform: translateY(-8px) rotate(-45deg);
+    }
   }
-   .media-header img {
+} 
+
+/* Minhas alterações */
+.media-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 35px;
+  img {
     margin-top: 60px;
+    }
   }
 
 }
 
 @media(max-width: 425px) {
-   .media-header .apresentation .sub-menu{
+  .sub-menu{
     display: flex;
     flex-direction: column;
     gap: 20px;
     justify-content: space-between;
     margin-top: 35px;
   }
-   .media-header > img {
+  img {
     display: none;
   }
 }
