--- a/jean.io/src/components/Projetos/projects.scss
+++ b/jean.io/src/components/Projetos/projects.scss
@@ -3,8 +3,8 @@
 @import '../../assets/scss/colors.scss';
 
 .projects {
-  display: none;
-  /* display: flex; */
+  // display: none;
+   display: flex; 
   flex-direction: column;
 
   max-width: 90%;
@@ -30,10 +30,12 @@
       justify-content: center;
       text-align: left;
       border: 1px solid $color-second;
-    
       background-color: $color-second;
-    
       padding: 20px 25px;
+      img {
+        width: 350px;
+        height: 200px;
+      }
   
       .figCaption-2 {
         font-size: 1.8rem;
