--- a/jean.io/src/assets/scss/global.scss
+++ b/jean.io/src/assets/scss/global.scss
@@ -4,9 +4,11 @@
 
 @import './colors.scss';
 
+@import './variables';
+
 body {
   background: $color-fourth;
-  max-width: 80%;
+  
   margin: auto;
   /* overflow:hidden; */
 }
@@ -23,11 +25,11 @@ a {
 }
 
 .title {
-  font-size: 2.6rem;
+  font-size: $font-title;
   line-height: 3.3rem;
 }
 .title-2 {
-  font-size: 2.6rem;
+  font-size: $font-title;
   line-height: 4.6rem;
 }
 
@@ -44,6 +46,13 @@ a {
 
 .description {
   font-size: 1.8rem;
+  color: $color-fifth;
+}
+
+.small-text {
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.8rem;
   color: $color-fifth;
 }
 
