--- a/jean.io/src/components/Navbar/navbar.scss
+++ b/jean.io/src/components/Navbar/navbar.scss
@@ -4,8 +4,12 @@
 
 @import '../../assets/scss/colors.scss';
 
+@import '../../assets/scss/_variables.scss';
+
 
 .navbar {
+  max-width: $body-default;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
