refactor(Mudando de tecnologia): :ambulance: Mudano de scss para css
Tive que mudar por causa do grid

--- a/jean.io/src/components/AboutMe/aboutMe.css
+++ b/jean.io/src/components/AboutMe/aboutMe.css
@@ -5,12 +5,12 @@
   justify-content: center;
   margin: auto;
   margin-top: 169px;
+}
 
-  .title-main {
-    margin-bottom: 30px;
-  }
+.about-me .title-main {
+  margin-bottom: 30px;
+}
 
-  .description {
-    line-height: 3.2rem;
-  }
+.about-me .description {
+  line-height: 3.2rem;
 }
