--- a/jean.io/src/assets/css/global.css
+++ b/jean.io/src/assets/css/global.css
@@ -1,17 +1,17 @@
-@import './reset.scss';
+@import './reset.css';
 
-@import './root.scss';
+@import './root.css';
 
-@import './colors.scss';
+@import './colors.css';
 
-@import './variables';
+@import './_variables.css';
+
 
 body {
-  background: $color-fourth;
-  
-  margin: auto;
+  background: var(--color-fourth);
   /* overflow:hidden; */
 }
+
 
 li {
     list-style: none;
@@ -20,16 +20,20 @@ li {
 a {
     text-decoration: none;
 }
+.main,.header {
+  max-width: 80%;
+  margin: auto;
+}
 .title, .title-2, .title-main {
   font-weight: 700;
 }
 
 .title {
-  font-size: $font-title;
+  font-size: 2.6rem;
   line-height: 3.3rem;
 }
 .title-2 {
-  font-size: $font-title;
+  font-size: 2.6rem;
   line-height: 4.6rem;
 }
 
@@ -46,20 +50,13 @@ a {
 
 .description {
   font-size: 1.8rem;
-  color: $color-fifth;
-}
-
-.small-text {
-  font-size: 1.4rem;
-  font-weight: 400;
-  line-height: 1.8rem;
-  color: $color-fifth;
+  color: var(--color-fifth);
 }
 
 .button {
   width: 143px;
   height: 50px;
-  background: $color-primary;
+  background: var(--color-primary);
   border: none;
   font-size: 1.4rem;
   line-height: 1.8rem;
@@ -69,18 +66,24 @@ a {
 .outlined-button {
   width: 157px;
   height: 49px;
-  border: 1px solid $color-second;
+  border: 1px solid var(--color-second);
   display: flex;
   align-items: center;
   justify-content: center;
-
-  a {
-    text-decoration: none;
-    color: inherit;
-    font-size: 1.4rem;
-    font-weight: 500;
-    line-height: 1.8rem;
-  }
   
 }
 
+.outlined-button > a {
+  text-decoration: none;
+  color: inherit;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+}
+
+.small-text {
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.8rem;
+  color: var(--color-fifth);
+}
